# aw-client

./: .gitignore  .travis.yml  Makefile  Pipfile  README.md  ffhistory2aw.py  lastfm2activitywatch.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  tests.py
.github/workflows/: build.yml  codeql.yml  examples.yml
actwa/client/: client.py
aw/client/: __init__.py  client.py  generate_config.py
aw_client/: __init__.py  __main__.py  classes.py  cli.py  client.py  config.py  generate_config.py  queries.py  queueclient.py  singleinstance.py  sync.py
examples/: email_report.py  load_dataframe.py  merge_buckets.py  redact_sensitive.py  suggest_categories.py  suggest_categories_gpt.py  suggest_categories_openrouter.py  time_spent_today.py  working_hours.py  working_hours_gspread.py
tests/: test_auth.py  test_client.py  test_failqueue.py  test_requestqueue.py  test_sync.py
tests/queries/: aw-development.awquery2
