[tool.poetry]
name = "aw-client"
version = "0.5.9"
description = "Client library for ActivityWatch"
authors = ["Erik Bjäreholt <erik@bjareho.lt>", "Johan Bjäreholt <johan@bjareho.lt>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://activitywatch.net/"
repository = "https://github.com/ActivityWatch/aw-client/"
documentation = "https://docs.activitywatch.net/"
packages = [
    { include = "aw_client" },
]

[tool.poetry.scripts]
aw-client = "aw_client.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
aw-core = "^0.5.7"
requests = "*"
persist-queue = "*"
click = "^8.0"
tabulate = "*"
typing-extensions = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "*"
mypy = "*"
pylint = "*"
types-requests = "*"
types-tabulate = "*"
pyupgrade = "^2.32.1"
black = "^22.3.0"

[tool.mypy]
files = ["aw_client", "tests", "examples"]
ignore_missing_imports = true
check_untyped_defs = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
