[tool.poetry]
name = "aw-client"
version = "0.5.13"
description = "Client library for ActivityWatch"
authors = ["Erik Bjäreholt <erik@bjareho.lt>", "Johan Bjäreholt <johan@bjareho.lt>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://activitywatch.net/"
repository = "https://github.com/ActivityWatch/aw-client/"
documentation = "https://docs.activitywatch.net/"
packages = [
    { include = "aw_client" },
]

[tool.poetry.scripts]
aw-client = "aw_client.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
aw-core = "^0.5.16"
requests = "*"
persist-queue = "*"
click = "^8.0"
tabulate = "*"
typing-extensions = "*"

[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"
pytest = "^7.0"
pytest-cov = "*"
types-requests = "*"
types-tabulate = "*"
gspread = "^5.12.4"  # used in examples

[tool.mypy]
files = ["aw_client", "tests", "examples"]
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "UP"]
ignore = ["E402", "E501", "B905"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
